[package]
name = "gotenberg_pdf"
version = "0.5.2"
edition = "2024"
license = "MIT"
description = "A Rust client for the Gotenberg PDF API"
keywords = ["gotenberg", "pdf", "chromium", "libreoffice"]

[dependencies]
reqwest = { version = "0.13", features = [
    "multipart",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
serde_json = "1.0"
zeroize = { version = "1.8", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["zeroize"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
stream = ["reqwest/stream", "futures"]
http2 = ["reqwest/http2"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]

all-features = true
